# aspp-cw2

./: .gitignore  README.md  a100-n256-g4.yml  buildscript.sh  make_submission.sh  notes.md  run-a100.yml  run-h100.yml  run.yml  test.yml
ProjectReport/: B283069_ASPP_Report2.aux  B283069_ASPP_Report2.fdb_latexmk  B283069_ASPP_Report2.fls  Makefile  sbc-template.aux  sbc-template.fdb_latexmk  sbc-template.fls  sbc-template.tex
a100/: a100-n256-g4.yml
build-CUDA/: CMakeCache.txt  Makefile  awave  cmake_install.cmake
h100-cases-by-gpu/g1/: h100-n1024-g1.yml  h100-n1536-g1.yml  h100-n2048-g1.yml  h100-n2500-g1.yml  h100-n256-g1.yml  h100-n512-g1.yml
h100-cases-by-gpu/g2/: h100-n1024-g2.yml  h100-n1536-g2.yml  h100-n2048-g2.yml  h100-n2500-g2.yml  h100-n256-g2.yml  h100-n512-g2.yml
h100-cases-by-gpu/g4/: h100-n1024-g4.yml  h100-n1536-g4.yml  h100-n2048-g4.yml  h100-n2500-g4.yml  h100-n256-g4.yml  h100-n512-g4.yml
h100-cases-by-gpu/g8/: h100-n1024-g8.yml  h100-n1536-g8.yml  h100-n2048-g8.yml  h100-n2500-g8.yml  h100-n256-g8.yml  h100-n512-g8.yml
src/: ASPP.cmake  CMakeLists.txt  h5io.cpp  h5io.h  init_sos.cpp  init_sos.h  main.cpp  ndarray.h  parallel.cpp  parallel.h  params.h  ufield.cpp  ufield.h  util.h  wave_cpu.cpp  wave_cpu.h  wave_cuda.cu  wave_cuda.h  wave_omp.cpp  wave_omp.h  wave_sycl.cpp  wave_sycl.h
